--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/aa (1).jpg
+    - assets/images/aa (2).jpg
+    - assets/images/aa (3).jpg
+    - assets/images/aa (4).jpg
+    - assets/images/aa (5).jpg
+    - assets/images/aa (6).jpg
+    - assets/images/aa (7).jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
